# KUAM

./: .gitignore  .gitmodules  README.md  package structures.graphml  state machine.graphml  system architecture.graphml
apps/data_processing/aruco_marker/kuam_aruco_tracking/: CMakeLists.txt
apps/data_processing/aruco_marker/kuam_aruco_tracking/config/: calib.txt  detector_params.yml  param.yaml
apps/data_processing/aruco_marker/kuam_aruco_tracking/launch/: aruco_tracking.launch
apps/data_processing/global_path/kuam_global_path/: CMakeLists.txt  package.xml
apps/data_processing/kuam_data_processing/: package.xml
apps/data_processing/kuam_data_processing/launch/: data_processing.launch
apps/data_processing/kuam_data_processing/rviz/: data_processing.rviz
apps/data_processing/kuam_data_processing/scripts/: launch-data_processing.sh
apps/data_processing/yolo_vehicle_detection/kuam_vehicle_position/: CMakeLists.txt  package.xml
apps/data_processing/yolo_vehicle_detection/pub_img_stream/: CMakeLists.txt  package.xml
apps/maneuver_planning/kuam_mission_manager/: CMakeLists.txt  package.xml
apps/maneuver_planning/kuam_mission_manager/config/: param.yaml
apps/maneuver_planning/kuam_mission_manager/launch/: mission_manager.launch
apps/maneuver_planning/kuam_mission_manager/rviz/: mission_manager.rviz
apps/maneuver_planning/kuam_mission_manager/src/: mission_manager.cpp  mission_manager_node.cpp  utils.cpp
apps/maneuver_planning/kuam_payload_cmd/: CMakeLists.txt  package.xml
apps/maneuver_planning/kuam_payload_cmd/config/: param.yaml
apps/maneuver_planning/kuam_payload_cmd/launch/: payload_cmd.launch  payload_cmd_tmp.launch  px4.launch
apps/maneuver_planning/kuam_payload_cmd/scripts/: launch-common.sh  launch-px4.sh
apps/maneuver_planning/kuam_payload_cmd/src/: payload_cmd.cpp  utils.cpp
apps/maneuver_planning/kuam_state_machine/: CMakeLists.txt  package.xml
apps/maneuver_planning/kuam_state_machine/config/: param.yaml
apps/maneuver_planning/kuam_state_machine/launch/: state_machine.launch
apps/maneuver_planning/kuam_state_machine/rviz/: state_machine.rviz
apps/maneuver_planning/kuam_state_machine/src/: state_machine.py  utils.cpp
config/: CMakeLists.txt  aruco_parser.txt  config  (+6 more)
control/kuam_ctrl_visual/: CMakeLists.txt  package.xml
control/kuam_ctrl_visual/include/kuam_ctrl_visual/: visualize_control.h
control/kuam_ctrl_visual/launch/: visualize_control.launch
control/kuam_ctrl_visual/rviz/: ctrl_visual.rviz
control/kuam_ctrl_visual/src/: utils.cpp  visualize_control.cpp  visualize_control_node.cpp
control/kuam_gen_waypoints/: CMakeLists.txt  package.xml
control/kuam_gen_waypoints/include/kuam_gen_waypoints/: generate_waypoints.h
control/kuam_gen_waypoints/launch/: generate_waypoints.launch
control/kuam_gen_waypoints/src/: generate_waypoints.cpp  generate_waypoints_node.cpp  test_waypoint_node.cpp  utils.cpp
data_processing/kuam_aruco_tracking/: CMakeLists.txt
data_processing/kuam_aruco_tracking/aruco_marker_creation/: create_board_charuco.cpp  create_marker  readme.txt
data_processing/kuam_aruco_tracking/charuco_calibration/: calibrate_camera_charuco
data_processing/kuam_aruco_tracking/include/kuam_aruco_tracking/: aruco_tracking.h  parser.h
data_processing/kuam_aruco_tracking/launch/: aruco_tracking.launch
data_processing/kuam_aruco_tracking/rviz/: aruco_tracking.rviz
data_processing/kuam_aruco_tracking/scrips/: detected.py  eval.py
data_processing/kuam_aruco_tracking/src/: aruco_tracking.cpp  aruco_tracking_node.cpp  parser.cpp
data_processing/kuam_data_utils/: CMakeLists.txt  package.xml
data_processing/kuam_data_utils/launch/: chat.launch  checker.launch
data_processing/kuam_data_utils/src/: chat_node.cpp  checker_node.cpp
maneuver_planning/kuam_offb/: CMakeLists.txt
maneuver_planning/kuam_offb/include/kuam_offb/: offb.h
maneuver_planning/kuam_offb/launch/: control.launch  tf_broadcaster.launch
maneuver_planning/kuam_offb/scripts/: launch-offb.sh
maneuver_planning/kuam_offb/src/: eval copy.py  eval.py  offb.cpp
maneuver_planning/kuam_state_machine/: CMakeLists.txt  package.xml
maneuver_planning/kuam_state_machine/config/: param.yaml
maneuver_planning/kuam_state_machine/include/kuam_state_machine/: setpoint_tf.h
maneuver_planning/kuam_state_machine/launch/: state_machine.launch
maneuver_planning/kuam_state_machine/src/: eval.py  state_machine.py  test.py  utils.py
maneuver_planning/kuam_state_machine/src/hmi/: setpoint_tf.cpp  setpoint_tf_node.cpp  setpoint_visual.cpp
maneuver_planning/kuam_state_machine/src/state/: arm.py  flight.py  hovering.py  landing.py  standby.py  state.py  takeoff.py
msgs/kuam_msgs/: CMakeLists.txt  package.xml
msgs/kuam_msgs/msg/: AlphaEval.msg  ArucoState.msg  ArucoStates.msg  ArucoVisual.msg  ArucoVisuals.msg  Completion.msg  FittingPlane.msg  FittingPlanes.msg  LandingState.msg  MarkerState.msg  MarkerStateArray.msg  Mode.msg  Qgc.msg  QgcDatum.msg  Setpoint.msg  Status.msg  TargetState.msg  TargetStateArray.msg  Task.msg  TaskList.msg  TransReq.msg  VehicleState.msg  Waypoint.msg  Waypoints.msg  marker_ids.msg
msgs/kuam_msgs/srv/: EmergyRequest.srv  GlobalPathSync.srv  LandRequest.srv
perception/aruco_tracking/: CMakeLists.txt  package.xml
perception/aruco_tracking/include/aruco_tracking/: aruco_tracking.h  parser.h
perception/aruco_tracking/launch/: aruco_tracking.launch
perception/aruco_tracking/src/: aruco_tracking.cpp  aruco_tracking_node.cpp  detect_markers.cpp  parser.cpp
tools/kuam_global_tf/: CMakeLists.txt  package.xml
tools/kuam_global_tf/config/: param.yaml
tools/kuam_global_tf/include/kuam_global_tf/: global_tf.h  utils.h
tools/kuam_global_tf/launch/: global_tf.launch
tools/kuam_global_tf/src/: global_tf.cpp  utils.cpp
tools/kuam_visual/: CMakeLists.txt  package.xml
tools/kuam_visual/include/kuam_visual/: utils.h
tools/kuam_visual/launch/: aruco_visualize_rviz.launch  visualize_rviz.launch
tools/kuam_visual/rviz/: kuam.rviz
tools/kuam_visual/src/: aruco_visual.cpp  kuam_visual.cpp  marker.py  utils.cpp
(+345 files in other folders)
