<?xml version="1.0"?>
<package format="2">
  <name>kuam_data_processing</name>
  <version>0.0.1</version>
  <description>The kuam_data_processing package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="kimkys768@gmail.com">darienmt</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->

  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
